simulation images saved+

--- a/data_preprocessing_greg.ipynb
+++ b/data_preprocessing_greg.ipynb
@@ -2055,22 +2055,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "raw",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1187,)\n",
-      "[3. 0. 1. ... 1. 3. 0.]\n",
-      "1187\n"
-     ]
-    }
-   ],
    "source": [
     "labels = np.zeros(len(p_perf))\n",
     "for i in range(len(p_perf)): # the goal is to define the classification of the labels for the crossentropy loss\n",
@@ -2682,7 +2670,7 @@
     "#labels_training = labels[:1013]\n",
     "#labels_test = labels[1013:]\n",
     "\n",
-    "X_train = lstm_inputs[:1012]\n",
+    "X_train = [lstm_inputs[:1012]\n",
     "y_train = labels_training\n",
     "\n",
     "X_test = lstm_inputs[1012:-1]\n",
